End of part 3 of the tutorial.

--- a/TourOfHeroes/TourOfHeroes.csproj
+++ b/TourOfHeroes/TourOfHeroes.csproj
@@ -266,6 +266,8 @@
     <TypeScriptCompile Include="Angular\src\app\app.component.spec.ts" />
     <TypeScriptCompile Include="Angular\src\app\app.component.ts" />
     <TypeScriptCompile Include="Angular\src\app\app.module.ts" />
+    <TypeScriptCompile Include="Angular\src\app\hero-detail.component.ts" />
+    <TypeScriptCompile Include="Angular\src\app\hero.ts" />
     <TypeScriptCompile Include="Angular\src\main.ts" />
   </ItemGroup>
   <ItemGroup>
