--- a/TourOfHeroes/TourOfHeroes.csproj
+++ b/TourOfHeroes/TourOfHeroes.csproj
@@ -280,7 +280,7 @@
     <TypeScriptCompile Include="Angular\src\app\hero-detail.component.ts" />
     <TypeScriptCompile Include="Angular\src\app\hero.service.ts" />
     <TypeScriptCompile Include="Angular\src\app\hero.ts" />
-    <TypeScriptCompile Include="Angular\src\app\mock-heroes.ts" />
+    <TypeScriptCompile Include="Angular\src\app\in-memory-data.service.ts" />
     <TypeScriptCompile Include="Angular\src\main.ts" />
   </ItemGroup>
   <ItemGroup>
